# drakma

./: .gitignore  Procfile  docker-compose.yaml  drakma-cli.Dockerfile  go.mod  go.sum  main.go  manage.py  package.json  pyproject.toml  requirements.txt  test.py
.github/workflows/: scraper.yml
account/: urls.py
api/: admin.py  urls.py
api/endpoints/: __init__.py  account.py  account_activities.py  accounts.py  accounts_upload.py  amount_owing.py  current_account.py  skipthedishes_statement.py
api/migrations/: 0001_initial.py  0002_currentaccount.py  0003_accountactivity.py  0004_amountowing.py  0005_contact.py  0006_skipthedishesorder.py
api/models/: __init__.py  account.py  account_activity.py  amount_owing.py  contact.py  current_account.py  skipthedishes_order.py
api/serializers/: __init__.py  account.py  account_activity.py
api/utils/: csv.py  date.py  money.py
backend/: settings.py  urls.py
backend/middleware/: csrf.py
bot/: driver.go  options.go
bot/provider/: enbridgegas.go
cmd/: enbridge.go  rogers.go  root.go  skipthedishes.go  version.go
drakma/: asgi.py  settings.py  urls.py  views.py  wsgi.py
drakma/setting/: base.py  development.py  production.py
public/: index.html
scraper/: drakma.go  driver.go  task.go  utils.go
scraper/enbridge/: core.go  scraper.go
scraper/rogers/: core.go  scraper.go
scraper/skipthedishes/: core.go  scraper.go
sms/: __init__.py  client.py
src/: App.tsx  HomeRoute.tsx  drakma.ts  index.tsx  routes.ts  types.d.ts
src/account/: Login.tsx
src/api/: auth.ts  client.ts
src/app/: routes.tsx  (+2 more)
(+20 files in other folders)
