[tool.poetry]
name = "drakma"
version = "0.1.0"
description = ""
authors = ["Tony X <zylphrex@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.8"
djangorestframework = "^3.11.2"
whitenoise = "^5.1.0"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
django-money = "^1.1"
sentry-sdk = "^0.16.1"
twilio = "^6.44.0"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-drakma = "poetry.masonry.api"
